@@ -1,3 +1,8 @@
+2013-12-14  Araki Ken  <arakiken@users.sf.net>
+
+	* libptyssh/ml_pty_ssh.c: Opening a new channel after creating a session
+	  works non-blocking for multi-threading.
+
 2013-12-11  Araki Ken  <arakiken@users.sf.net>
 
 	* x_picture.c: Double free of file names of inline pictures is fixed.
